Created stress tests for UserService and updated gradle test tasks definition